tests/baselines/reference/callOverloads3.errors.txt
==== tests/cases/compiler/callOverloads3.ts (2 errors) ====
    
    function Foo():Foo;
    function Foo(s:string):Foo;
    class Foo {    
    ~~~~~
!!! callOverloads3.ts(4,1): error TS1041: Function implementation expected.
          ~~~
!!! callOverloads3.ts(4,7): error TS2000: Duplicate identifier 'Foo'. Additional locations:
!!! 	callOverloads3.ts(2,1)
        bar1() { /*WScript.Echo("bar1");*/ }
        constructor(x: any) {
            // WScript.Echo("Constructor function has executed");
        }
    }
    //class Foo(s: String);
    
    var f1 = new Foo("hey");
    
    
    f1.bar1();
    Foo();
    Foo("s");
    